--- a/package.json
+++ b/package.json
@@ -1,5 +1,42 @@
 {
+  "name": "masoria-lang",
+  "version": "1.0.0",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "description": "A novel syntax parser built in typescript!",
+  "homepage": "https://github.com/masoria-lang",
+  "scripts": {
+    "build": "tsc"
+  },
+  "keywords": [
+    "novel",
+    "visual novel",
+    "scripting language"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sum117/masoria-lang.git"
+  },
+  "author": {
+    "name": "João Victor Caliman",
+    "email": "jvcaliman@hotmail.com",
+    "url": "https://github.com/sum117"
+  },
+  "contributors": [
+    {
+      "name": "Vinnicius Correia",
+      "email": "vcorreiawork@gmail.com",
+      "url": "https://github.com/vincorreia"
+    }
+  ],
+  "files": [
+    "dist"
+  ],
+  "bugs": {
+    "url": "https://github.com/sum117/masoria-lang/issues"
+  },
   "devDependencies": {
-    "@types/node": "^18.11.13"
+    "@types/node": "^18.11.13",
+    "typescript": "^4.9.4"
   }
 }
