--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,19 @@
 {
   "compilerOptions": {
-    "declaration": true,
+    "target": "ESNext",
+
+    "module": "esnext",
+    "rootDir": "src",
     "outDir": "dist",
-  }
+    "moduleResolution": "node",
+
+    "resolveJsonModule": true,
+
+    "declaration": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
+  },
+  "exclude": ["src/test.ts"]
 }
